<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="2dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:id="@+id/imageDebtType"
        android:layout_margin="5dp"
        android:contentDescription="@string/iv_description"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textDebtType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="2dp"
                android:text="@string/thing_str"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textThingNameOrMoneyAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/thing_name_example"
                android:layout_marginLeft="2dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/debt_item_ll_return_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="2dp"
                android:text="@string/return_date"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textReturnDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:text="29.02.2020"
                android:layout_marginLeft="2dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="2dp"
                android:text="@string/recipient_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textRecipientName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="С.Хоккинг"
                android:layout_marginLeft="2dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>