<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        tools:context="com.mashjulal.the_debtor.EditDebtActivity"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="2dp"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/activity_add_debt_rg_debt_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/activity_add_debt_rb_thing_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.98"
                android:checked="true"
                android:text="@string/thing_type_title" />

            <RadioButton
                android:id="@+id/activity_add_debt_rb_money_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/money_type_title" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/activity_add_debt_ll_thing_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/activity_add_debt_iv_photo_preview"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:onClick="showPhoto"
                    app:srcCompat="@drawable/example_picture" />

                <ImageButton
                    android:id="@+id/activity_add_debt_ib_make_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/make_or_show_photo"
                    android:onClick="makePhoto"
                    app:srcCompat="@android:drawable/ic_menu_camera" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/activity_add_debt_et_thing_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_thing_name_hint"
                    android:inputType="textPersonName"
                    android:maxLength="15" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_add_debt_ll_money_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/money_amount_title" />

            <EditText
                android:id="@+id/activity_add_debt_et_money_amount"
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:maxLength="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/borrow_date_title" />

            <Button
                android:id="@+id/activity_add_debt_b_change_borrow_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:onClick="changeBorrowDate" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/return_date_title" />

            <Button
                android:id="@+id/activity_add_debt_b_change_return_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:onClick="changeReturnDate"
                android:text="@string/no_return_date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/activity_add_debt_et_recipient_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:layout_weight="0.56"
                android:ems="10"
                android:hint="@string/recipient_name_hint"
                android:inputType="textPersonName"
                android:maxLength="15" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/activity_add_debt_et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/description_hint"
                android:inputType="textMultiLine"
                android:maxLength="150" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/activity_add_debt_b_add_debt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:clickable="true"
        android:onClick="addDebt"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_action_ok" />

    <!--RADIO_GROUP_DEBT_TYPE-->

    <!--LAYOUT_TYPE_THING-->

    <!--LAYOUT_TYPE_MONEY-->

    <!--LAYOUT_BORROW_DATE-->

    <!--LAYOUT_RETURN_TIME-->

    <!--LAYOUT_DESCRIPTION-->

    <!--LAYOUT_SAVE_DISMISS_DEBT-->

</RelativeLayout>
